# TerminologyProject

./: README.md  db.sqlite3  manage.py  pyproject.toml
TerminologyProject/: asgi.py  settings.py  urls.py  wsgi.py
refbooks/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
refbooks/migrations/: 0001_initial.py  0002_alter_refbookversion_options_and_more.py
